--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+/front/node_modules
+/front/.pnp
 .pnp.js
 .yarn/install-state.gz
 
 # testing
-/coverage
+/front/coverage
 
 # next.js
-/.next/
-/out/
+/front/.next/
+/front/out/
 
 # production
-/build
+/front/build
 
 # misc
 .DS_Store
