--- a/front/package.json
+++ b/front/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "auth": "^1.0.2",
     "axios": "^1.6.7",
-    "next": "14.0.4",
+    "next": "^14.0.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.0.5"
