--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,89 @@
+annotated-types==0.6.0
+anyio==4.2.0
 certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+contourpy==1.2.0
+cryptography==42.0.2
+cycler==0.12.1
+dnspython==2.5.0
+ecdsa==0.18.0
+email-validator==2.1.0.post1
+exceptiongroup==1.2.0
+fastapi==0.109.0
+filelock==3.13.1
+fonttools==4.47.2
+fsspec==2023.12.2
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.2
+httptools==0.6.1
+httpx==0.26.0
 idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+kiwisolver==1.4.5
+MarkupSafe==2.1.4
+matplotlib==3.8.2
+mpmath==1.3.0
+networkx==3.2.1
+numpy==1.26.3
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
+opencv-python==4.9.0.80
+orjson==3.9.12
+packaging==23.2
+pandas==2.2.0
+passlib==1.7.4
+pillow==10.2.0
+psutil==5.9.8
+psycopg2-binary==2.9.9
+py-cpuinfo==9.0.0
+pyarrow==15.0.0
+pyasn1==0.5.1
+pycparser==2.21
+pydantic==2.6.0
+pydantic-extra-types==2.5.0
+pydantic-settings==2.1.0
+pydantic_core==2.16.1
+pyparsing==3.1.1
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.6
+pytz==2023.4
+PyYAML==6.0.1
 requests==2.31.0
+rsa==4.9
+scipy==1.12.0
+seaborn==0.13.2
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.25
+starlette==0.35.1
+sympy==1.12
+thop==0.1.1.post2209072238
+torch==2.2.0
+torchvision==0.17.0
+tqdm==4.66.1
+triton==2.2.0
+typing_extensions==4.9.0
+tzdata==2023.4
+ujson==5.9.0
+ultralytics==8.1.9
 urllib3==2.1.0
-jinja2==2.11.3
+uvicorn==0.27.0.post1
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
