--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ back/image/
 back/uploaded_images/
 back/test_image/
 back/*model*/
+back/train*/
+back/test*/
 back/*.pt
 **/__pycache__/
 front/.next
