add signin, signout, findUserID

--- a/.env
+++ b/.env
@@ -16,4 +16,7 @@ GOOGLE_CLIENT_SECRET=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
 #NEXTAUTH_URL=http://172.16.101.247:8080
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=qerkasjhfkauiqeywrhkasjhfksajfh
+
+Localhost=http://10.223.114.14:8080
+api_url=http://10.223.114.14:8080
 ```
