--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "auth": "^1.0.2",
     "axios": "^1.6.7",
     "next": "^14.0.4",
