--- a/front/package.json
+++ b/front/package.json
@@ -17,7 +17,8 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@types/node": "20.11.25",
