--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ back/config.ini
 back/images/
 back/models/
 back/vectors/
-
+back/Stanford_Online_Products/
+back/LaundryGothic_TTF/
 
 front/.next
 front/.env
