--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
+    "@types/three": "^0.163.0",
     "auth": "^1.0.2",
     "axios": "^1.6.7",
     "next": "^14.0.4",
@@ -18,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.0.5",
+    "three": "^0.163.0",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
