--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
     "swiper": "^11.0.5",
     "three": "^0.163.0",
     "websocket": "^1.0.34"
