--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,35 @@
 absl-py==2.1.0
+aiohttp==3.9.5
+aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.2.0
+asttokens==2.4.1
 astunparse==1.6.3
+async-timeout==4.0.3
+attrs==23.2.0
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+comm==0.2.2
 contourpy==1.2.0
 cryptography==42.0.2
 cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
 dm-tree==0.1.8
 dnspython==2.5.0
 ecdsa==0.18.0
 email-validator==2.1.0.post1
 exceptiongroup==1.2.0
+executing==2.0.1
+faiss-cpu==1.8.0
+faiss-gpu==1.7.2
 fastapi==0.109.0
 filelock==3.13.1
 flatbuffers==24.3.7
 fonttools==4.47.2
+frozenlist==1.4.1
 fsspec==2023.12.2
 gast==0.5.4
 google-pasta==0.2.0
@@ -29,19 +41,30 @@ httpcore==1.0.2
 httptools==0.6.1
 httpx==0.26.0
 idna==3.6
+ipykernel==6.29.4
+ipython==8.23.0
 itsdangerous==2.1.2
+jedi==0.19.1
 Jinja2==3.1.3
+joblib==1.4.0
+jupyter_client==8.6.1
+jupyter_core==5.7.2
 keras==3.0.5
 kiwisolver==1.4.5
 libclang==16.0.6
+lightning==2.2.4
+lightning-utilities==0.11.2
 Markdown==3.5.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.4
 matplotlib==3.8.2
+matplotlib-inline==0.1.6
 mdurl==0.1.2
 ml-dtypes==0.3.2
 mpmath==1.3.0
+multidict==6.0.5
 namex==0.0.7
+nest-asyncio==1.6.0
 networkx==3.2.1
 numpy==1.26.3
 nvidia-cublas-cu12==12.1.3.1
@@ -61,11 +84,20 @@ opt-einsum==3.3.0
 orjson==3.9.12
 packaging==23.2
 pandas==2.2.0
+parso==0.8.4
 passlib==1.7.4
+pexpect==4.9.0
+pgvector==0.2.5
 pillow==10.2.0
+pillow_heif==0.15.0
+platformdirs==4.2.0
+plotly==5.20.0
+prompt-toolkit==3.0.43
 protobuf==4.25.3
 psutil==5.9.8
 psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
 py-cpuinfo==9.0.0
 pyarrow==15.0.0
 pyasn1==0.5.1
@@ -80,27 +112,36 @@ python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.6
+pytorch-lightning==2.2.4
 pytz==2023.4
 PyYAML==6.0.1
+pyzmq==25.1.2
 requests==2.31.0
 rich==13.7.1
 rsa==4.9
+scikit-learn==1.4.2
 scipy==1.12.0
 seaborn==0.13.2
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.25
+stack-data==0.6.3
 starlette==0.35.1
 sympy==1.12
+tenacity==8.2.3
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
 tensorflow-io-gcs-filesystem==0.36.0
 termcolor==2.4.0
 thop==0.1.1.post2209072238
+threadpoolctl==3.4.0
 torch==2.2.0
+torchmetrics==1.3.2
 torchvision==0.17.0
+tornado==6.4
 tqdm==4.66.1
+traitlets==5.14.2
 triton==2.2.0
 typing_extensions==4.9.0
 tzdata==2023.4
@@ -110,6 +151,8 @@ urllib3==2.1.0
 uvicorn==0.27.0.post1
 uvloop==0.19.0
 watchfiles==0.21.0
+wcwidth==0.2.13
 websockets==12.0
 Werkzeug==3.0.1
 wrapt==1.16.0
+yarl==1.9.4
